@@ -1,5 +1,10 @@
 2017-11-30  Claudiu Zissulescu  <claziss@synopsys.com>
 
+	* gcc.target/arc/loop-3.c: New test.
+	* gcc.target/arc/loop-4.c: Likewise.
+
+2017-11-30  Claudiu Zissulescu  <claziss@synopsys.com>
+
 	* gcc.target/arc/loop-2.cpp: New test.
 
 2017-11-30  Claudiu Zissulescu  <claziss@synopsys.com>
